[gd_scene load_steps=19 format=2]

[ext_resource path="res://interfaces/on_daylight_menus/scripts/on_daylight_main.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://interfaces/custom_gui/in_game_console.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/vine_boom.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/thin_pixelated.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/statistics.tscn" type="PackedScene" id=6]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/live_updates.tscn" type="PackedScene" id=7]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/order_ingredients.tscn" type="PackedScene" id=8]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/prepare_ingredients.tscn" type="PackedScene" id=9]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/tech_upgrades.tscn" type="PackedScene" id=10]
[ext_resource path="res://interfaces/on_daylight_menus/sub_scenes/management_main.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/resources/tres/restaurant.tres" type="Resource" id=12]
[ext_resource path="res://scripts/resources/tres/customer.tres" type="Resource" id=13]

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[node name="OnDaylight" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
resto = ExtResource( 12 )
custo = ExtResource( 13 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.937255, 0.937255, 0.937255, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 20

[node name="topbar" type="ColorRect" parent="VBoxContainer"]
margin_right = 1326.0
margin_bottom = 64.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
color = Color( 0.517647, 0.517647, 0.517647, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/topbar"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
custom_constants/separation = 40

[node name="Day" type="Label" parent="VBoxContainer/topbar/HBoxContainer"]
margin_top = 19.0
margin_right = 291.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Day"
valign = 1

[node name="Money" type="Label" parent="VBoxContainer/topbar/HBoxContainer"]
margin_left = 331.0
margin_top = 19.0
margin_right = 623.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Money"
valign = 1

[node name="Waste" type="Label" parent="VBoxContainer/topbar/HBoxContainer"]
margin_left = 663.0
margin_top = 19.0
margin_right = 954.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Waste"
valign = 1

[node name="Satisfaction" type="Label" parent="VBoxContainer/topbar/HBoxContainer"]
margin_left = 994.0
margin_top = 19.0
margin_right = 1286.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Satisfaction"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 1326.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 744.0
margin_bottom = 644.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.57
custom_constants/separation = 20

[node name="menu icons" type="ColorRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 744.0
margin_bottom = 111.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
color = Color( 0.517647, 0.517647, 0.517647, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10

[node name="LiveUpdatingStats" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
clip_text = true
icon_align = 1
expand_icon = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/LiveUpdatingStats"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Live Updating Statistics"
align = 1
valign = 1
autowrap = true

[node name="OrderIngredients" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer"]
margin_left = 110.0
margin_right = 210.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
clip_text = true
icon_align = 1
expand_icon = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/OrderIngredients"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Order Ingredients"
align = 1
valign = 1
autowrap = true

[node name="PrepareIngredients" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer"]
margin_left = 220.0
margin_right = 320.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
clip_text = true
icon_align = 1
expand_icon = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/PrepareIngredients"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Prepare Ingredients"
align = 1
valign = 1
autowrap = true

[node name="TechUpgrades" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer"]
margin_left = 330.0
margin_right = 430.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
clip_text = true
icon_align = 1
expand_icon = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/TechUpgrades"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Tech Upgrades"
align = 1
valign = 1
autowrap = true

[node name="Statistics" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer"]
margin_left = 440.0
margin_right = 540.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
clip_text = true
icon_align = 1
expand_icon = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/Statistics"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Statistics"
align = 1
valign = 1
autowrap = true

[node name="Management" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer"]
margin_left = 550.0
margin_right = 650.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
clip_text = true
icon_align = 1
expand_icon = true

[node name="ButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/Management"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Waste Management"
align = 1
valign = 1
autowrap = true

[node name="middle" type="ColorRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 744.0
margin_bottom = 579.0
size_flags_vertical = 3
color = Color( 0.517647, 0.517647, 0.517647, 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/middle"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="LiveUpdates" parent="VBoxContainer/HBoxContainer/VBoxContainer/middle/MarginContainer" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 724.0
margin_bottom = 428.0

[node name="OrderIngredients" parent="VBoxContainer/HBoxContainer/VBoxContainer/middle/MarginContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 724.0
margin_bottom = 428.0

[node name="PrepareIngredients" parent="VBoxContainer/HBoxContainer/VBoxContainer/middle/MarginContainer" instance=ExtResource( 9 )]
visible = false

[node name="TechUpgrades" parent="VBoxContainer/HBoxContainer/VBoxContainer/middle/MarginContainer" instance=ExtResource( 10 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 724.0
margin_bottom = 428.0

[node name="Statistics" parent="VBoxContainer/HBoxContainer/VBoxContainer/middle/MarginContainer" instance=ExtResource( 6 )]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ManagementHander" parent="VBoxContainer/HBoxContainer/VBoxContainer/middle/MarginContainer" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 724.0
margin_bottom = 428.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 599.0
margin_right = 744.0
margin_bottom = 644.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
custom_constants/separation = 20
alignment = 2

[node name="ToTitleScreen" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 362.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "To Title Screen"
expand_icon = true

[node name="StartDay" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 382.0
margin_right = 744.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Start Day"
expand_icon = true

[node name="GameConsole" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 764.0
margin_right = 1326.0
margin_bottom = 644.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.43

[node name="VillagerSigh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 7.0

[node name="VineBoom" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -5.0

[node name="PauseFrame" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.25098, 0.25098, 0.411765 )

[node name="Title" type="Label" parent="PauseFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Serving Customers..."
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/LiveUpdatingStats" to="." method="_on_LiveUpdatingStats_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/OrderIngredients" to="." method="_on_OrderIngredients_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/PrepareIngredients" to="." method="_on_PrepareIngredients_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/TechUpgrades" to="." method="_on_TechUpgrades_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/Statistics" to="." method="_on_Statistics_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/menu icons/HBoxContainer/Management" to="." method="_on_Management_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ToTitleScreen" to="." method="_on_ToTitleScreen_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/StartDay" to="." method="_on_StartDay_pressed"]
